Scripting: don't crash when trying to create invalid panels

ScriptEngine::createContainment will return nullptr and will *not*
create the containment when a non existent plugin is passed.
therefore createContainmentWrapper need to be guarded for it, or
scripts can crash plasmashell

To test it, try to create a panel layout with the template attached on bug 515385

BUG:515385


(cherry picked from commit 89af48b4544ad2db1f2b7cb93cb8d17d5dcba7f7)

75ab6cdc Scripting: don't crash when trying to create invalid panels

Co-authored-by: Marco Martin <notmart@gmail.com>